@@ -21,6 +21,9 @@
 
 package cascading.flow.stack;
 
+import java.io.IOException;
+import java.util.Set;
+
 import cascading.flow.FlowElement;
 import cascading.flow.FlowStep;
 import cascading.flow.Scope;
@@ -35,9 +38,6 @@ import cascading.util.Util;
 import org.apache.hadoop.mapred.JobConf;
 import org.apache.hadoop.mapred.OutputCollector;
 import org.apache.log4j.Logger;
-
-import java.io.IOException;
-import java.util.Set;
 
 /**
  *
@@ -171,6 +171,9 @@ public class FlowMapperStack
         }
       catch( StackException exception )
         {
+        if( exception.getCause() instanceof Error )
+          throw (Error) exception.getCause();
+
         if( exception.getCause() instanceof IOException )
           throw (IOException) exception.getCause();
 
